# ic_ufpi_agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: Dockerfile  Makefile  README.md  cloudbuild.yaml  entrypoint.sh  main.py  requirements.txt
app/api/v1/: api.py  dependencies.py
app/api/v1/endpoints/: agent.py  agent_190_twilio.py  agent_190_zapi.py
app/crud/: agent190_modeling.py  audio_transcript.py  history_bq.py  maps.py  test_api.py  vision_ocr.py
app/crud/adapters/: adapter.py  factory.py
app/crud/agents/: agent190_modeling.py
app/crud/features/: audio_transcript.py  gemini_vision.py  history_bq.py  maps.py  protocol_generator.py  vision_ocr.py
app/crud/managers/: llm_manager.py
app/crud/tools/: get_person_data.py  tools.py
app/notebooks/: agent_gcp.ipynb
app/utils/: classes.py  globals.py  prompts.py  result.py
