[project]
name = "ic"
version = "0.1.0"
description = "IC UFPI Project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.2",
    "google-cloud-vision>=3.7.4",
    "langchain>=0.3.3",
    "ruff>=0.6.9",
    "speechrecognition>=3.10.4",
    "twilio>=9.3.3",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["E501"]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
quote-style = "single"

