[project]
name = "ic"
version = "0.1.0"
description = "IC UFPI Project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.2",
    "google-cloud-bigquery>=3.27.0",
    "google-cloud-storage>=2.18.2",
    "google-cloud-vision>=3.7.4",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.8",
    "langchain>=0.3.3",
    "ruff>=0.6.9",
    "soundfile>=0.12.1",
    "speechrecognition>=3.10.4",
    "twilio>=9.3.3",
    "langchain-ollama>=0.2.2",
    "ollama>=0.4.5",
    "langchain-google-vertexai>=2.0.9",
    "langchain-xai>=0.1.1",
    "docker>=7.1.0",
    "pymupdf>=1.25.2",
    "langchain-deepseek>=0.1.2",
    "pydantic-settings>=2.8.1",
    "redis>=5.2.1",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.60",
    "httpx>=0.27.2",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["E501", "B008"]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
quote-style = "single"
